# pico-template

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  envrc  flash  gdb-connect-ocd  pico-lib3  reset
.cache/clangd/index/: main.c.CEE9721FF20552AE.idx
pico-lib2/dev/: CMakeLists.txt
pico-lib2/sys/: sys_fn.c
src/: main.c
src/dev/dev_ds3231/: dev_ds3231.c
src/sys/include/: sys_fn.h
